# raftbare

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: action.rs  config.rs  event.rs  lib.rs  log.rs  message.rs  node.rs  promise.rs  quorum.rs  role.rs
tests/: fixed_scenario_test.rs  random_scenario_test.rs  scenarios.rs  test_cluster.rs
