[package]
name = "noraft"
version = "0.3.0"
edition = "2024"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT"
description = "Minimal, feature-complete Raft for Rust - no I/O, no dependencies"
homepage = "https://github.com/sile/noraft"
repository = "https://github.com/sile/noraft"
readme = "README.md"

[dependencies]

[dev-dependencies]
rand = "0.9.2"
